# knowhere

./: CMakeLists.txt  Makefile  conanfile.py
.github/: mergify.yml
benchmark/: CMakeLists.txt
benchmark/hdf5/: benchmark_float_bitset.cpp  benchmark_float_qps.cpp
cmake/libs/: libfaiss.cmake
cmake/libs/cardinal/v1/: CMakeLists.txt
cmake/libs/cardinal/v2/: CMakeLists.txt
include/knowhere/: bitsetview_idselector.h  config.h  expected.h
include/knowhere/comp/: index_param.h
include/knowhere/index/: index_node.h
src/common/: utils.cc
src/common/comp/: brute_force.cc  knowhere_config.cc
src/common/cuvs/integration/: cuvs_knowhere_config.hpp  cuvs_knowhere_index.cuh
src/index/data_view_dense_index/: index_node_with_data_view_refiner.h
src/index/faiss/: faiss.cc
src/index/flat/: flat.cc
src/index/gpu_cuvs/: gpu_cuvs_cagra_config.h
src/index/hnsw/: faiss_hnsw.cc
src/index/hnsw/impl/: IndexHNSWWrapper.cc
src/index/ivf/: ivf.cc  ivf_wrapper.cc  ivf_wrapper.h  ivfrbq_wrapper.cc  ivfrbq_wrapper.h
src/simd/: distances_avx.cc  distances_avx.h  distances_avx512.cc  distances_avx512.h  distances_ref.cc  distances_ref.h  hook.cc  hook.h
tests/faiss/: CMakeLists.txt
tests/faiss_isolated/: CMakeLists.txt  CMakeLists.txt.001  runme.sh  runme1.sh
tests/ut/: test_config.cc  test_error_code.cc  test_gpu_search.cc  test_ivfflat_cc.cc  test_knowhere_init.cc  test_simd.cc  test_type.cc
